--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,6 +18,23 @@
   --grid-cell-width: 2.5em;
   --grid-cell-height: 2.5em;
 }
+input[type='text'] {
+  cursor: text;
+}
+
+.easy {
+  background-color: var(--radar-green);
+  color: var(--text-white);
+}
+.medium {
+  background-color: var(--navy-background);
+  color: var(--text-white);
+}
+.hard {
+  background-color: var(--hit);
+  color: black;
+}
+
 .ship {
   color: var(--battleship-gray);
 }
@@ -98,6 +115,7 @@ main {
   justify-content: center;
   padding-bottom: 0.5em;
 }
+
 .main-grid-header > p,
 .tracking-grid-header > p {
   font-weight: bold;
@@ -112,6 +130,108 @@ main {
   border: 1px solid var(--text-white);
 }
 
+.settings-dialog[open] {
+  background-color: var(--ocean-blue);
+  color: var(--text-white);
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  border-radius: 10px;
+  width: 50vw;
+}
+.settings-dialog-title {
+  font-size: 2rem;
+  font-weight: bold;
+  font-family: 'bebas-neue';
+  letter-spacing: 0.1rem;
+  text-align: center;
+}
+
+.board-settings-title,
+.player-one-settings-title,
+.player-two-settings-title {
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: bold;
+  border-bottom: 2px solid var(--text-white);
+  margin-bottom: 0.5rem;
+}
+.player-information-input-container {
+  display: flex;
+  gap: 0.5em;
+}
+.player-information-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+  width: 100%;
+}
+.player-information-container > input,
+.player-information-container > select {
+  width: 100%;
+  height: 100%;
+  padding: 0.25em;
+}
+
+.board-settings-container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+.board-settings-inputs-container {
+  display: flex;
+  gap: 0.25em;
+  justify-content: center;
+}
+.rows-input-wrapper,
+.cols-input-wrapper,
+.letter-axis-input-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  font-weight: bold;
+}
+.rows-input-wrapper > input,
+.cols-input-wrapper > input {
+  min-width: 55px;
+}
+.letter-axis-input-wrapper > select {
+  min-width: 125px;
+  height: 100%;
+  text-align: center;
+}
+
+.dialog-buttons-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+}
+
+.settings-button,
+.settings-submit-button,
+.settings-cancel-button {
+  height: 2.25em;
+  border: 2px solid var(--text-white);
+  background-color: var(--navy-background);
+  color: var(--text-white);
+  font-weight: bold;
+  padding: 0.5em;
+  border-radius: 10px;
+}
+.settings-button:hover,
+.settings-submit-button:hover {
+  border-color: var(--navy-background);
+  background-color: var(--radar-green);
+}
+.settings-cancel-button:hover {
+  border-color: var(--radar-green);
+  background-color: var(--text-white);
+  color: black;
+}
+
+::backdrop {
+  background-color: rgba(0, 9, 17, 0.9);
+}
 /* Footer */
 /*#region*/
 footer {
@@ -139,10 +259,14 @@ footer a {
 }
 /*#endregion*/
 
+.hide {
+  display: none;
+}
+
 @media (max-width: 1200px) {
   :root {
-    --grid-cell-width: 1.5em;
-    --grid-cell-height: 1.5em;
+    --grid-cell-width: 2em;
+    --grid-cell-height: 2em;
   }
   .board {
     display: flex;
@@ -151,6 +275,6 @@ footer a {
     align-items: center;
   }
   footer {
-    font-size: 1rem;
+    display: none;
   }
 }
