--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -187,26 +187,27 @@ div.fleet-entry[data-sunk='true'] {
   text-decoration: line-through;
 }
 
-.tracking-fleet-list-container,
-.main-fleet-list-container {
+.tracking-fleet,
+.main-fleet {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: baseline;
   min-width: fit-content;
-  gap: 0.25em;
+  gap: 0.3em;
 }
-.tracking-fleet-list-container-header,
-.main-fleet-list-container-header {
+.tracking-fleet-header,
+.main-fleet-header {
   text-align: center;
   font-size: 1.25rem;
   font-weight: bold;
   border-bottom: 2px solid var(--text-white);
   width: 100%;
 }
-.main-fleet-list {
+.main-fleet-ship-list {
   width: 100%;
 }
+
 .fleet-entry {
   background-color: var(--navy-background);
   border: none;
@@ -218,10 +219,10 @@ div.fleet-entry[data-sunk='true'] {
   width: 100%;
 }
 
-.fleet-list-button-container {
+.main-fleet-button-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.25em;
 }
 .submit-ships-placement-button,
 .rotate-ship-button,
@@ -229,7 +230,8 @@ div.fleet-entry[data-sunk='true'] {
   font-weight: bold;
   font-size: 1.25rem;
   border-radius: 10px;
-  padding: 0.25em;
+  padding: 0.2em;
+  width: 100%;
 }
 .rotate-ship-button,
 .end-turn-button {
@@ -237,14 +239,10 @@ div.fleet-entry[data-sunk='true'] {
   color: var(--text-white);
   border: 3px solid var(--radar-green);
 }
-.end-turn-button {
-  width: 100%;
-}
 .submit-ships-placement-button {
   background-color: var(--ocean-blue);
   color: var(--text-white);
   border: 3px solid var(--radar-green);
-  margin-top: 0.5rem;
 }
 .submit-ships-placement-button:hover {
   background-color: var(--radar-green);
