Rework Settings Dialog
- Added `EventListenerManager` for managing simple DOM-level listeners.
- Rebuilt settings dialog into MVC architecture.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -38,7 +38,7 @@ div.grid-cell.main-grid-hit-marker {
 
 .easy {
   background-color: var(--radar-green);
-  color: var(--text-white);
+  color: black;
 }
 .medium {
   background-color: var(--navy-background);
