Refactor ship and continue state work
Split the Ship component up into smaller more focused modules.
  - Separated the placement and selection logic from the main controller
    and view into their own individual controllers/views.

Refactored some component and event constants to their components *WIP

Refactored some stylings to their components and improved some styling rules *WIP

Continued working on the state and event management.

Implemented the AI display view.
  - Takes a TrackingGridView and modifies it for in-game user viewing.
    Tracks and displays the AI's attacks.

--- a/src/js/components/Dialogs/SettingsDialog/view/settings-styles.css
+++ b/src/js/components/Dialogs/SettingsDialog/view/settings-styles.css
@@ -1,5 +1,14 @@
 @import url('../../common/dialog-styles.css');
 
+.board-settings-title,
+.player-one-settings-title,
+.player-two-settings-title {
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: bold;
+  border-bottom: 2px solid var(--text-white);
+  margin-bottom: 0.5rem;
+}
 .player-information-input-container {
   display: flex;
   gap: 0.5em;
