--- a/src/js/components/Board/view/board-style.css
+++ b/src/js/components/Board/view/board-style.css
@@ -7,7 +7,7 @@
   padding-top: 1.25em;
 }
 
-.current-player-display {
+.player-name-display {
   text-align: center;
   font-size: 3em;
   font-weight: bold;
