--- a/src/js/Components/Board/view/board-style.css
+++ b/src/js/Components/Board/view/board-style.css
@@ -43,3 +43,18 @@
   height: 1rem;
   padding-right: 0.25em;
 }
+.main-grid-utility-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.board-buttons-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+}
+.board-buttons-container > button {
+  flex: 1;
+  height: 60px;
+}
